Fix a bunch of stuff (wholesale)